--- a/StoryBoardDemo/StoryBoardDemo/Base.lproj/Main.storyboard
+++ b/StoryBoardDemo/StoryBoardDemo/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ysf-Uo-oYU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ysf-Uo-oYU">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--Tab Bar Controller-->
         <scene sceneID="CY9-xX-bIc">
             <objects>
-                <tabBarController id="Ysf-Uo-oYU" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="FXTabBarController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ysf-Uo-oYU" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="Snd-MC-TiJ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -42,7 +43,7 @@
             </objects>
             <point key="canvasLocation" x="-1750.5" y="1656.75"/>
         </scene>
-        <!--SettingVC-->
+        <!--Setting-->
         <scene sceneID="keL-bD-sBA">
             <objects>
                 <viewController id="up7-iG-oOM" customClass="SettingVC" sceneMemberID="viewController">
@@ -86,7 +87,7 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="Wnf-GI-yYc"/>
+                    <navigationItem key="navigationItem" title="Setting" id="Wnf-GI-yYc"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qoR-5q-sIS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -109,7 +110,7 @@
             </objects>
             <point key="canvasLocation" x="-1750.5" y="998.25"/>
         </scene>
-        <!--View Controller-->
+        <!--Weather-->
         <scene sceneID="BxZ-Qy-dOn">
             <objects>
                 <viewController id="OQm-UC-5LY" sceneMemberID="viewController">
@@ -122,7 +123,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="LRQ-d5-aLI"/>
+                    <navigationItem key="navigationItem" title="Weather" id="LRQ-d5-aLI"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aGo-KD-0q8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -145,7 +146,7 @@
             </objects>
             <point key="canvasLocation" x="-1750.5" y="328.5"/>
         </scene>
-        <!--View Controller-->
+        <!--Calendar-->
         <scene sceneID="IGB-5A-4zL">
             <objects>
                 <viewController id="AXN-uV-xbd" sceneMemberID="viewController">
@@ -158,7 +159,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="fkx-q9-Iob"/>
+                    <navigationItem key="navigationItem" title="Calendar" id="fkx-q9-Iob"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L2d-Kl-bky" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -181,7 +182,7 @@
             </objects>
             <point key="canvasLocation" x="-1750.5" y="-326.25"/>
         </scene>
-        <!--HomeVC-->
+        <!--Home-->
         <scene sceneID="1Hi-4d-uPT">
             <objects>
                 <tableViewController id="6U4-h2-hr8" customClass="HomeVC" sceneMemberID="viewController">
@@ -216,7 +217,7 @@
                             <outlet property="delegate" destination="6U4-h2-hr8" id="NR2-5J-Lhz"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="1Jg-N8-uJM"/>
+                    <navigationItem key="navigationItem" title="Home" id="1Jg-N8-uJM"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="siZ-Ms-LaA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
